--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,22 +7,20 @@ environment:
   global:
     PHP: "C:/PHP"
   matrix:
-    - PHP_VERSION: "5.6"
-    - PHP_VERSION: "7.0"
-    - PHP_VERSION: "7.1"
+    - PHP_VERSION: "5.6.17"
+    - PHP_VERSION: "7.0.9"
+    - PHP_VERSION: "7.1.1"
 
 matrix:
   allow_failures:
-    - PHP_VERSION: "5.6"
-    - PHP_VERSION: "7.0"
-    - PHP_VERSION: "7.1"
+    - PHP_VERSION: "5.6.17"
 
 install:
   - ps: Set-Service wuauserv -StartupType "Automatic"; Start-Service wuauserv
-  - ps: appveyor-retry cinst --ignore-checksums -y php --version ([string](choco search php --exact --all-versions -r | Select-String -Pattern $Env:PHP_VERSION | % { New-Object System.Version(($_ -split '\|')[1]) } | Sort | Select-Object -First 1))
+  - ps: appveyor-retry cinst --ignore-checksums -y php --version $Env:PHP_VERSION
   - SET PATH=C:\tools\php\;%PATH%
   - cd c:\tools\php
-  - copy php.ini-development php.ini
+  - copy php.ini-development php.inix
   - echo date.timezone="UTC" >> php.ini
   - echo extension_dir=ext >> php.ini
   - echo extension=php_openssl.dll >> php.ini
