--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,6 @@ platform: 'x64'
 clone_folder: c:\projects\ldaptools
 
 environment:
-  global:
-    PHP: "C:/PHP"
   matrix:
     - PHP_VERSION: "5.6.17"
     - PHP_VERSION: "7.0.9"
@@ -20,7 +18,7 @@ install:
   - ps: appveyor-retry cinst --ignore-checksums -y php --version $Env:PHP_VERSION
   - SET PATH=C:\tools\php\;%PATH%
   - cd c:\tools\php
-  - copy php.ini-development php.inix
+  - copy php.ini-development php.ini
   - echo date.timezone="UTC" >> php.ini
   - echo extension_dir=ext >> php.ini
   - echo extension=php_openssl.dll >> php.ini
